<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:scrollbarSize="50sp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.75"
        android:background="@color/monitor"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="bottom"
            android:id="@+id/txt_main_monitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="50sp"
            android:text="0"
            tools:text="test" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        android:background="@color/monitor"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="3"
            android:background="@color/empty" />

        <Button
            android:id="@+id/btn_main_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/operator"
            android:text="@string/delete"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/monitor"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_main_7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/digitButton"
            android:text="@string/_7"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn_main_8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/digitButton"
            android:text="@string/_8"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn_main_9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/digitButton"
            android:text="@string/_9"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn_main_division"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/operator"
            android:text="@string/divide"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/monitor"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_main_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/digitButton"
            android:text="@string/_4"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn_main_5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/digitButton"
            android:text="@string/_5"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn_main_6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/digitButton"
            android:text="@string/_6"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn_main_multiple"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/operator"
            android:text="@string/multiple"
            android:textSize="50sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/monitor"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_main_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/digitButton"
            android:text="@string/_1"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn_main_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/digitButton"
            android:text="@string/_2"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn_main_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/digitButton"
            android:text="@string/_3"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn_main_Submission"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@color/operator"
            android:text="@string/submission"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/monitor"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_main_dot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/digitButton"
            android:text="@string/dot"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn_main_0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/digitButton"
            android:text="@string/_0"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn_main_assignment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/operator"
            android:text="@string/assigment"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn_main_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/operator"
            android:text="@string/addition"
            android:textSize="50sp" />
    </LinearLayout>
</LinearLayout>